platform/backstage/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    app.kubernetes.io/part-of: kafka-selfservice-platform
